@@ -1,0 +1,62 @@
+ELF Header:
+  Magic:   7f 45 4c 46 01 01 01 61 00 00 00 00 00 00 00 00 
+  Class:                             ELF32
+  Data:                              2's complement, little endian
+  Version:                           1 (current)
+  OS/ABI:                            ARM
+  ABI Version:                       0
+  Type:                              REL (Relocatable file)
+  Machine:                           ARM
+  Version:                           0x1
+  Entry point address:               0x0
+  Start of program headers:          0 (bytes into file)
+  Start of section headers:          268 (bytes into file)
+  Flags:                             0x0
+  Size of this header:               52 (bytes)
+  Size of program headers:           0 (bytes)
+  Number of program headers:         0
+  Size of section headers:           40 (bytes)
+  Number of section headers:         9
+  Section header string table index: 8
+
+Section Headers:
+  [Nr] Name              Type            Addr     Off    Size   ES Flg Lk Inf Al
+  [ 0]                   NULL            00000000 000000 000000 00      0   0  0
+  [ 1] .symtab           SYMTAB          00000000 000034 0000a0 10      2  10  4
+  [ 2] .strtab           STRTAB          00000000 0000d4 000004 00      0   0  1
+  [ 3] BSS1              NOBITS          00000000 0000d8 000000 00  WA  0   0  4
+  [ 4] BSS2              NOBITS          00000000 0000d8 000008 00  WA  0   0  4
+  [ 5] BSS3              NOBITS          00000000 0000d8 000004 00  WA  0   0  4
+  [ 6] BSS4              NOBITS          00000000 0000d8 000008 00  WA  0   0  4
+  [ 7] BSS5              NOBITS          00000000 0000d8 0000a0 00  WA  0   0  4
+  [ 8] .shstrtab         STRTAB          00000000 0000d8 000034 00      0   0  1
+Key to Flags:
+  W (write), A (alloc), X (execute), M (merge), S (strings)
+  I (info), L (link order), G (group), T (TLS), E (exclude), x (unknown)
+  O (extra OS processing required) o (OS specific), p (processor specific)
+
+There are no section groups in this file.
+
+There are no program headers in this file.
+
+There are no relocations in this file.
+
+There are no unwind sections in this file.
+
+Symbol table '.symtab' contains 10 entries:
+   Num:    Value  Size Type    Bind   Vis      Ndx Name
+     0: 00000000     0 NOTYPE  LOCAL  DEFAULT  UND 
+     1: 00000000     0 NOTYPE  LOCAL  DEFAULT    4 $d
+     2: 00000000     0 NOTYPE  LOCAL  DEFAULT    5 $d
+     3: 00000000     0 NOTYPE  LOCAL  DEFAULT    6 $d
+     4: 00000000     0 NOTYPE  LOCAL  DEFAULT    7 $d
+     5: 00000000     0 SECTION LOCAL  DEFAULT    3 
+     6: 00000000     0 SECTION LOCAL  DEFAULT    4 
+     7: 00000000     0 SECTION LOCAL  DEFAULT    5 
+     8: 00000000     0 SECTION LOCAL  DEFAULT    6 
+     9: 00000000     0 SECTION LOCAL  DEFAULT    7 
+
+No version information found in this file.
+
+out/area_noinit_elf.o:     file format elf32-littlearm
+
